--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 	        <artifactId>maven-surefire-plugin</artifactId>
 	        <version>3.5.2</version>
 	        <configuration>
+	        <systemPropertyVariables>
+                    <env>${gridURL}</env>
+                </systemPropertyVariables>
 	          <suiteXmlFiles>
 	            <suiteXmlFile>testng.xml</suiteXmlFile>
 	          </suiteXmlFiles>
